--- a/aframework/pom.xml
+++ b/aframework/pom.xml
@@ -11,19 +11,26 @@
 		<project.build.sourceEncoding>
 			UTF-8
 		</project.build.sourceEncoding>
+
 		<junit-version>3.8.1</junit-version>
+
 		<mybatis-version>3.4.0</mybatis-version>
 		<mybatis-spring-version>1.3.0</mybatis-spring-version>
 		<mysql-version>5.1.26</mysql-version>
+
 		<springframework-version>4.3.6.RELEASE</springframework-version>
+		<springframework-redis-version>1.8.4.RELEASE</springframework-redis-version>
+		<redis-clients-version>2.9.0</redis-clients-version>
 		<jackson-version>2.8.9</jackson-version>
+
 		<mybatis-spring-version>1.3.1</mybatis-spring-version>
 		<druid-version>1.0.26</druid-version>
 		<slf4j-version>1.7.7</slf4j-version>
 		<shiro-version>1.3.2</shiro-version>
+
 		<!-- tools -->
-		<commons-io.version>2.5</commons-io.version>
-		<commons-lang3.version>3.6</commons-lang3.version>
+		<commons-io-version>2.5</commons-io-version>
+		<commons-lang3-version>3.6</commons-lang3-version>
 
 		<!-- environment setting -->
 		<jdk.version>1.8</jdk.version>
@@ -130,6 +137,18 @@
 		</dependency>
 
 		<dependency>
+			<groupId>org.springframework.data</groupId>
+			<artifactId>spring-data-redis</artifactId>
+			<version>${springframework-redis-version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>redis.clients</groupId>
+			<artifactId>jedis</artifactId>
+			<version>${redis-clients-version}</version>
+		</dependency>
+
+		<dependency>
 			<groupId>org.apache.shiro</groupId>
 			<artifactId>shiro-core</artifactId>
 			<version>${shiro-version}</version>
@@ -215,17 +234,17 @@
 		<dependency>
 			<groupId>commons-io</groupId>
 			<artifactId>commons-io</artifactId>
-			<version>${commons-io.version}</version>
+			<version>${commons-io-version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-lang3</artifactId>
-			<version>${commons-lang3.version}</version>
+			<version>${commons-lang3-version}</version>
 		</dependency>
 		<dependency>
 			<groupId>commons-io</groupId>
 			<artifactId>commons-io</artifactId>
-			<version>${commons-io.version}</version>
+			<version>${commons-io-version}</version>
 		</dependency>
 		<!-- tools end -->
 
