--- a/aframework/aframework-service/pom.xml
+++ b/aframework/aframework-service/pom.xml
@@ -14,6 +14,11 @@
 	<packaging>jar</packaging>
 
 	<dependencies>
+			<dependency>
+			<groupId>org.aframework.core</groupId>
+			<artifactId>aframework-core</artifactId>
+			<version>1.0.0</version>
+		</dependency>
 		<dependency>
 			<groupId>org.aframework.domain</groupId>
 			<artifactId>aframework-domain</artifactId>
