--- a/aframework/pom.xml
+++ b/aframework/pom.xml
@@ -181,6 +181,13 @@
 			<version>${jackson-version}</version>
 		</dependency>
 
+		<!-- file upload -->
+		<dependency>
+			<groupId>commons-fileupload</groupId>
+			<artifactId>commons-fileupload</artifactId>
+			<version>1.3.3</version>
+		</dependency>
+
 		<!-- 添加sevlet支持 -->
 		<dependency>
 			<groupId>javax.servlet</groupId>
