--- a/aframework/pom.xml
+++ b/aframework/pom.xml
@@ -24,7 +24,7 @@
 		<jackson-version>2.8.9</jackson-version>
 
 		<mybatis-spring-version>1.3.1</mybatis-spring-version>
-		<druid-version>1.0.26</druid-version>
+		<druid-version>1.1.2</druid-version>
 		<slf4j-version>1.7.7</slf4j-version>
 		<shiro-version>1.3.2</shiro-version>
 
@@ -78,7 +78,7 @@
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>3.8.1</version>
+			<version>${junit-version}</version>
 			<scope>test</scope>
 		</dependency>
 
@@ -247,11 +247,6 @@
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-lang3</artifactId>
 			<version>${commons-lang3-version}</version>
-		</dependency>
-		<dependency>
-			<groupId>commons-io</groupId>
-			<artifactId>commons-io</artifactId>
-			<version>${commons-io-version}</version>
 		</dependency>
 		<!-- tools end -->
 
