--- a/aframework/pom.xml
+++ b/aframework/pom.xml
@@ -12,7 +12,7 @@
 			UTF-8
 		</project.build.sourceEncoding>
 
-		<junit-version>3.8.1</junit-version>
+		<junit-version>4.12</junit-version>
 
 		<mybatis-version>3.4.0</mybatis-version>
 		<mybatis-spring-version>1.3.0</mybatis-spring-version>
@@ -257,11 +257,19 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.5.1</version>
+				<version>3.6.1</version>
 				<configuration>
 					<source>${jdk.version}</source>
 					<target>${jdk.version}</target>
 					<showWarnings>true</showWarnings>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.20</version>
+				<configuration>
+					<skip>true</skip>
 				</configuration>
 			</plugin>
 		</plugins>
