--- a/aframework/aframework-core/pom.xml
+++ b/aframework/aframework-core/pom.xml
@@ -10,5 +10,13 @@
   <groupId>org.aframework.core</groupId>
   <artifactId>aframework-core</artifactId>
   <name>Archetype - aframework-core</name>
-  
+
+  <dependencies>
+    <dependency>
+      <groupId>org.aframework.domain</groupId>
+      <artifactId>aframework-domain</artifactId>
+      <version>1.0.0</version>
+    </dependency>
+  </dependencies>
+
 </project>
