--- a/aframework/pom.xml
+++ b/aframework/pom.xml
@@ -215,6 +215,12 @@
             <artifactId>jstl</artifactId>
             <version>1.2</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.freemarker</groupId>
+            <artifactId>freemarker</artifactId>
+            <version>2.3.26-incubating</version>
+        </dependency>
         <!-- web end -->
 
 
