--- a/aframework/aframework-data/src/test/resources/database.properties
+++ b/aframework/aframework-data/src/test/resources/database.properties
@@ -1,7 +1,9 @@
-jdbc.url=jdbc:mysql://192.168.0.118:3306/AFData
+jdbc.url=jdbc:mysql://172.16.2.86:3306/AFData
 jdbc.username=root
 jdbc.password=123456
-
-redis.hostName=192.168.0.118
+jdbc.order.url=jdbc:mysql://172.16.2.86:3306/AFOrder
+jdbc.order.username=root
+jdbc.order.password=123456
+redis.hostName=172.16.2.86
 redis.port=6379
 redis.password=123456
