--- a/aframework/aframework-service/src/test/resources/database.properties
+++ b/aframework/aframework-service/src/test/resources/database.properties
@@ -1,9 +1,9 @@
-jdbc.url=jdbc:mysql://192.168.0.118:3306/AFData
+jdbc.url=jdbc:mysql://172.16.2.86:3306/AFData?useUnicode=true&characterEncoding=utf-8
 jdbc.username=root
 jdbc.password=123456
-jdbc.order.url=jdbc:mysql://192.168.0.118:3306/AFOrder
+jdbc.order.url=jdbc:mysql://172.16.2.86:3306/AFOrder?useUnicode=true&characterEncoding=utf-8
 jdbc.order.username=root
 jdbc.order.password=123456
-redis.hostName=192.168.0.118
+redis.hostName=172.16.2.86
 redis.port=6379
 redis.password=123456
