--- a/aframework/aframework-service/src/test/resources/database.properties
+++ b/aframework/aframework-service/src/test/resources/database.properties
@@ -1,9 +1,20 @@
-jdbc.url=jdbc:mysql://172.16.2.86:3306/AFData?useUnicode=true&characterEncoding=utf-8
-jdbc.username=root
-jdbc.password=123456
-jdbc.order.url=jdbc:mysql://172.16.2.86:3306/AFOrder?useUnicode=true&characterEncoding=utf-8
-jdbc.order.username=root
-jdbc.order.password=123456
+#mater db
+jdbc.master.url=jdbc:mysql://172.16.2.85:3306/AFData?useUnicode=true&characterEncoding=utf-8
+jdbc.master.username=root
+jdbc.master.password=123456
+#master order db
+jdbc.master.order.url=jdbc:mysql://172.16.2.85:3306/AFOrder?useUnicode=true&characterEncoding=utf-8
+jdbc.master.order.username=root
+jdbc.master.order.password=123456
+#salve1 db
+jdbc.slave1.url=jdbc:mysql://172.16.2.86:3306/AFData?useUnicode=true&characterEncoding=utf-8
+jdbc.slave1.username=root
+jdbc.slave1.password=123456
+#salve1 order db
+jdbc.slave1.order.url=jdbc:mysql://172.16.2.86:3306/AFOrder?useUnicode=true&characterEncoding=utf-8
+jdbc.slave1.order.username=root
+jdbc.slave1.order.password=123456
+#redis db
 redis.hostName=172.16.2.86
 redis.port=6379
 redis.password=123456
