--- a/aframework/pom.xml
+++ b/aframework/pom.xml
@@ -18,6 +18,7 @@
         <mybatis-version>3.4.0</mybatis-version>
         <mybatis-spring-version>1.3.0</mybatis-spring-version>
         <mysql-version>5.1.26</mysql-version>
+        <sharding-jdbc-version>1.5.1</sharding-jdbc-version>
 
         <springframework-version>4.3.6.RELEASE</springframework-version>
         <springframework-redis-version>1.8.4.RELEASE</springframework-redis-version>
@@ -132,6 +133,18 @@
             <groupId>com.alibaba</groupId>
             <artifactId>druid</artifactId>
             <version>${druid-version}</version>
+        </dependency>
+
+        <!-- 引入sharding-jdbc核心模块 -->
+        <dependency>
+            <groupId>com.dangdang</groupId>
+            <artifactId>sharding-jdbc-core</artifactId>
+            <version>${sharding-jdbc-version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.dangdang</groupId>
+            <artifactId>sharding-jdbc-config-spring</artifactId>
+            <version>${sharding-jdbc-version}</version>
         </dependency>
         <!-- repository end -->
 
