--- a/aframework/aframework-web/pom.xml
+++ b/aframework/aframework-web/pom.xml
@@ -66,7 +66,7 @@
                     <dependency>
                         <groupId>org.springframework.restdocs</groupId>
                         <artifactId>spring-restdocs-asciidoctor</artifactId>
-                        <version>${spring-restdoc-version}</version>
+                        <version>${spring-restdoc.version}</version>
                     </dependency>
                 </dependencies>
             </plugin>
