--- a/aframework/pom.xml
+++ b/aframework/pom.xml
@@ -12,27 +12,27 @@
             UTF-8
         </project.build.sourceEncoding>
 
-        <junit-version>4.12</junit-version>
-        <spring-restdoc-version>1.2.1.RELEASE</spring-restdoc-version>
+        <junit.version>4.12</junit.version>
+        <spring-restdoc.version>1.2.1.RELEASE</spring-restdoc.version>
 
-        <mybatis-version>3.4.0</mybatis-version>
-        <mybatis-spring-version>1.3.0</mybatis-spring-version>
-        <mysql-version>5.1.26</mysql-version>
-        <sharding-jdbc-version>1.5.1</sharding-jdbc-version>
+        <mybatis.version>3.4.0</mybatis.version>
+        <mybatis-spring.version>1.3.0</mybatis-spring.version>
+        <mysql.version>5.1.26</mysql.version>
+        <sharding-jdbc.version>1.5.1</sharding-jdbc.version>
 
-        <springframework-version>4.3.6.RELEASE</springframework-version>
-        <springframework-redis-version>1.8.4.RELEASE</springframework-redis-version>
-        <redis-clients-version>2.9.0</redis-clients-version>
-        <jackson-version>2.8.9</jackson-version>
+        <springframework.version>4.3.6.RELEASE</springframework.version>
+        <springframework-redis.version>1.8.4.RELEASE</springframework-redis.version>
+        <redis-clients.version>2.9.0</redis-clients.version>
+        <jackson.version>2.8.9</jackson.version>
 
-        <mybatis-spring-version>1.3.1</mybatis-spring-version>
-        <druid-version>1.1.2</druid-version>
-        <slf4j-version>1.7.7</slf4j-version>
-        <shiro-version>1.3.2</shiro-version>
+        <mybatis-spring.version>1.3.1</mybatis-spring.version>
+        <druid.version>1.1.2</druid.version>
+        <slf4j.version>1.7.7</slf4j.version>
+        <shiro.version>1.3.2</shiro.version>
 
         <!-- tools -->
-        <commons-io-version>2.5</commons-io-version>
-        <commons-lang3-version>3.6</commons-lang3-version>
+        <commons-io.version>2.5</commons-io.version>
+        <commons-lang3.version>3.6</commons-lang3.version>
 
         <!-- environment setting -->
         <jdk.version>1.8</jdk.version>
@@ -81,20 +81,20 @@
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>${junit-version}</version>
+            <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
 
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-test</artifactId>
-            <version>${springframework-version}</version>
+            <version>${springframework.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.springframework.restdocs</groupId>
             <artifactId>spring-restdocs-mockmvc</artifactId>
-            <version>${spring-restdoc-version}</version>
+            <version>${spring-restdoc.version}</version>
             <scope>test</scope>
         </dependency>
         <!-- unit end -->
@@ -104,47 +104,47 @@
         <dependency>
             <groupId>org.mybatis</groupId>
             <artifactId>mybatis</artifactId>
-            <version>${mybatis-version}</version>
+            <version>${mybatis.version}</version>
         </dependency>
         <dependency>
             <groupId>org.mybatis</groupId>
             <artifactId>mybatis-spring</artifactId>
-            <version>${mybatis-spring-version}</version>
+            <version>${mybatis-spring.version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-jdbc</artifactId>
-            <version>${springframework-version}</version>
+            <version>${springframework.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-tx</artifactId>
-            <version>${springframework-version}</version>
+            <version>${springframework.version}</version>
         </dependency>
 
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
-            <version>${mysql-version}</version>
+            <version>${mysql.version}</version>
         </dependency>
 
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>druid</artifactId>
-            <version>${druid-version}</version>
+            <version>${druid.version}</version>
         </dependency>
 
         <!-- 引入sharding-jdbc核心模块 -->
         <dependency>
             <groupId>com.dangdang</groupId>
             <artifactId>sharding-jdbc-core</artifactId>
-            <version>${sharding-jdbc-version}</version>
+            <version>${sharding-jdbc.version}</version>
         </dependency>
         <dependency>
             <groupId>com.dangdang</groupId>
             <artifactId>sharding-jdbc-config-spring</artifactId>
-            <version>${sharding-jdbc-version}</version>
+            <version>${sharding-jdbc.version}</version>
         </dependency>
         <!-- repository end -->
 
@@ -153,52 +153,52 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-webmvc</artifactId>
-            <version>${springframework-version}</version>
+            <version>${springframework.version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.springframework.data</groupId>
             <artifactId>spring-data-redis</artifactId>
-            <version>${springframework-redis-version}</version>
+            <version>${springframework-redis.version}</version>
         </dependency>
 
         <dependency>
             <groupId>redis.clients</groupId>
             <artifactId>jedis</artifactId>
-            <version>${redis-clients-version}</version>
+            <version>${redis-clients.version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.apache.shiro</groupId>
             <artifactId>shiro-core</artifactId>
-            <version>${shiro-version}</version>
+            <version>${shiro.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.shiro</groupId>
             <artifactId>shiro-web</artifactId>
-            <version>${shiro-version}</version>
+            <version>${shiro.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.shiro</groupId>
             <artifactId>shiro-spring</artifactId>
-            <version>${shiro-version}</version>
+            <version>${shiro.version}</version>
         </dependency>
 
         <!-- spring mvc json -->
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-core</artifactId>
-            <version>${jackson-version}</version>
+            <version>${jackson.version}</version>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
-            <version>${jackson-version}</version>
+            <version>${jackson.version}</version>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-annotations</artifactId>
-            <version>${jackson-version}</version>
+            <version>${jackson.version}</version>
         </dependency>
 
         <!-- file upload -->
@@ -241,24 +241,24 @@
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
-            <version>${slf4j-version}</version>
+            <version>${slf4j.version}</version>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-log4j12</artifactId>
-            <version>${slf4j-version}</version>
+            <version>${slf4j.version}</version>
         </dependency>
         <!-- common-logging 实际调用slf4j -->
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>jcl-over-slf4j</artifactId>
-            <version>${slf4j-version}</version>
+            <version>${slf4j.version}</version>
         </dependency>
         <!-- java.util.logging 实际调用slf4j -->
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>jul-to-slf4j</artifactId>
-            <version>${slf4j-version}</version>
+            <version>${slf4j.version}</version>
         </dependency>
         <!-- log end -->
 
@@ -267,12 +267,12 @@
         <dependency>
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
-            <version>${commons-io-version}</version>
+            <version>${commons-io.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
-            <version>${commons-lang3-version}</version>
+            <version>${commons-lang3.version}</version>
         </dependency>
         <!-- tools end -->
 
