--- a/aframework/aframework-service/src/test/resources/database.properties
+++ b/aframework/aframework-service/src/test/resources/database.properties
@@ -3,25 +3,44 @@ jdbc.master.url=jdbc:mysql://172.16.2.85:3306/AFData?useUnicode=true&characterEn
 jdbc.master.username=root
 jdbc.master.password=123456
 #master order db
-jdbc.master.order.url=jdbc:mysql://172.16.2.85:3306/AFOrder?useUnicode=true&characterEncoding=utf-8
-jdbc.master.order.username=root
-jdbc.master.order.password=123456
+jdbc.master.order_2017.url=jdbc:mysql://172.16.2.85:3306/AFOrder_2017?useUnicode=true&characterEncoding=utf-8
+jdbc.master.order_2017.username=root
+jdbc.master.order_2017.password=123456
+
+jdbc.master.order_2018.url=jdbc:mysql://172.16.2.85:3306/AFOrder_2018?useUnicode=true&characterEncoding=utf-8
+jdbc.master.order_2018.username=root
+jdbc.master.order_2018.password=123456
+
+
+
 #salve1 db
 jdbc.slave1.url=jdbc:mysql://172.16.2.86:3306/AFData?useUnicode=true&characterEncoding=utf-8
 jdbc.slave1.username=root
 jdbc.slave1.password=123456
 #salve1 order db
-jdbc.slave1.order.url=jdbc:mysql://172.16.2.86:3306/AFOrder?useUnicode=true&characterEncoding=utf-8
-jdbc.slave1.order.username=root
-jdbc.slave1.order.password=123456
+jdbc.slave1.order_2017.url=jdbc:mysql://172.16.2.86:3306/AFOrder_2017?useUnicode=true&characterEncoding=utf-8
+jdbc.slave1.order_2017.username=root
+jdbc.slave1.order_2017.password=123456
+
+jdbc.slave1.order_2018.url=jdbc:mysql://172.16.2.86:3306/AFOrder_2018?useUnicode=true&characterEncoding=utf-8
+jdbc.slave1.order_2018.username=root
+jdbc.slave1.order_2018.password=123456
+
+
 #salve2 db
 jdbc.slave2.url=jdbc:mysql://172.16.2.87:3306/AFData?useUnicode=true&characterEncoding=utf-8
 jdbc.slave2.username=root
 jdbc.slave2.password=123456
 #salve2 order db
-jdbc.slave2.order.url=jdbc:mysql://172.16.2.87:3306/AFOrder?useUnicode=true&characterEncoding=utf-8
-jdbc.slave2.order.username=root
-jdbc.slave2.order.password=123456
+jdbc.slave2.order_2017.url=jdbc:mysql://172.16.2.87:3306/AFOrder_2017?useUnicode=true&characterEncoding=utf-8
+jdbc.slave2.order_2017.username=root
+jdbc.slave2.order_2017.password=123456
+
+jdbc.slave2.order_2018.url=jdbc:mysql://172.16.2.87:3306/AFOrder_2018?useUnicode=true&characterEncoding=utf-8
+jdbc.slave2.order_2018.username=root
+jdbc.slave2.order_2018.password=123456
+
+
 #redis db
 redis.hostName=172.16.2.86
 redis.port=6379
