--- a/.gitignore
+++ b/.gitignore
@@ -32,8 +32,11 @@ Thumbs.db
 
 *.class
 
+# web ignore
+docs/
 
-#plugs
+# plugs ignore
 /Plugs/mybatis-generator/lib/com
 /Plugs/apache-jmeter-3.2/backups
 /Plugs/apache-jmeter-3.2/bin/jmeter.log
+
